--- a/src/components/Genre/Genre.module.css
+++ b/src/components/Genre/Genre.module.css
@@ -1,25 +1,12 @@
-.link{
-    text-decoration: none;
+.butt{
+    width: 120px;
+    text-align: left;
+    background: cornflowerblue;
+    color: #d4f506;
+    border: none;
 }
 
-.genre{
-    border: 2px solid #e3e3e3;
-    box-shadow: 0 0 7px #666;
-    border-radius: 15px;
-    font-family: 'Calibri Light', serif;
+.Genre{
+    margin: 5px;
 
-    cursor: pointer;
-
-    width: 130px;
-    height: 30px;
-    margin: 10px;
-    padding-left: 15px;
-
-    box-sizing: border-box;
-
-    display: flex;
-    align-items: center;
-}
-.genre:hover{
-    background: #e3e3e3;
 }
