--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -1,8 +1,18 @@
-.Link {
-    text-decoration: none;
+.Header {
+    height: 50px;
+    background: cornflowerblue;
+    display: flex;
+    box-sizing: border-box;
+    justify-content: space-around;
+    align-items: center;
 }
-.header{
-    border: red solid 2px;
 
-    height: 8vh;
+.Header a{
+    text-decoration: none;
+    color: snow;
+    font-size: 25px;
+}
+
+.Header a[class='active']{
+    color: black;
 }
