--- a/src/components/MovieInfo/MovieInfo.module.css
+++ b/src/components/MovieInfo/MovieInfo.module.css
@@ -1,5 +1,27 @@
-.title{
-    font-size: 20px;
+.MovieInfo {
+    background-color: #f2f2f2;
+    border-radius: 5px;
+    box-shadow: 0 3px 10px rgba(0, 0, 0, 0.2);
+    max-width: 600px;
+    margin: 0 auto;
+    padding: 20px;
+    font-size: 1.1rem;
+    line-height: 1.6;
+    color: #333;
+}
+
+.title {
+    font-size: 2rem;
+    font-weight: bold;
     margin-bottom: 10px;
-    text-transform: uppercase;
+    color: #0c61b2;
+}
+b {
+    font-weight: bold;
+}
+
+hr {
+    margin: 20px 0;
+    border: none;
+    border-top: 1px solid #ccc;
 }
