--- a/src/components/MoviesListCard/MovieListCard.module.css
+++ b/src/components/MoviesListCard/MovieListCard.module.css
@@ -1,18 +1,23 @@
 .MovieListCard {
     width: 250px;
-    height: 550px;
+    height: 450px;
     display: flex;
     box-sizing: border-box;
     flex-direction: column;
     margin: 10px;
     text-align: center;
     text-decoration: none;
+    background-color: rgba(0, 0, 0, 0.2);
+    border-radius: 8px;
+    box-shadow: 0px 2px 8px rgba(0, 0, 0, 0.2);
 }
 
 .container{
     position: relative;
     text-align: center;
-    color: white;
+    color: rgba(0, 0, 0, 0.2);
+    border-radius: 8px 8px 0 0;
+    overflow: hidden;
 }
 
 .topright{
@@ -20,19 +25,34 @@
     top: 8px;
     right: 16px;
     margin-right: -15px;
+
 }
 
 img{
     width: 100%;
     height: 100%;
+    object-fit: cover;
 }
 
 .stars_badge{
     display: flex;
     box-sizing: border-box;
     justify-content: space-between;
+    padding: 10px;
+    align-items: center;
+    background-color: #1a1a1a;
+    color: #000000;
+    border-radius: 0 0 8px 8px;
 }
-
+.stars_badge .stars {
+    display: flex;
+    align-items: center;
+}
+.stars_badge .stars .rating {
+    font-size: 20px;
+    font-weight: bold;
+    margin-left: 5px;
+}
 
 .title {
     text-transform: uppercase;
@@ -40,4 +60,7 @@ img{
     color: black;
     font-size: 20px;
     margin-top: 10px;
+    font-weight: bold;
 }
+
+
