--- a/src/pages/NotFoundPage/NotFoundPage.module.css
+++ b/src/pages/NotFoundPage/NotFoundPage.module.css
@@ -2,22 +2,27 @@
     display: flex;
     box-sizing: border-box;
     justify-content: center;
+    align-items: center;
     color: snow;
     flex-direction: column;
     margin-top: 300px;
-    font-size: 40px;
-    margin-left: 30px;
+    font-size: 30px;
+    margin-left: 50px;
+    margin-right: 50px;
+    background-color: rgb(54, 58, 65,0.5);
 }
 
-.back{
-    width: 400px;
+.back-link{
+    width: 200px;
     height: 50px;
-    margin-top: 20px;
-    margin-left: -3px;
-    background: #d4f506;
-    color: black;
-    text-decoration: none;
-    text-align: center;
-    font-size: 25px;
-    padding-top: 10px;
+    align-items: center;
+    /*margin-top: 20px;*/
+    /*margin-left: -3px;*/
+    background: #363a41;
+    color: #ffffff;
+    /*text-decoration: none;*/
+    /*text-align: center;*/
+    /*font-size: 20px;*/
+    /*padding-top: 10px;*/
+    /*border-radius: 20%;*/
 }
