--- a/src/components/MoviesList/MovieList.module.css
+++ b/src/components/MoviesList/MovieList.module.css
@@ -4,6 +4,7 @@
     flex-wrap: wrap;
     justify-content: center;
     height: 100%;
+
 }
 
 .pagination {
@@ -12,8 +13,39 @@
     justify-content: center;
     margin-bottom: 50px;
 }
+.column {
+    display: flex;
+    flex-direction: column;
+    box-sizing: border-box;
+}
+
+.loading {
+    display: flex;
+    justify-content: center;
+    box-sizing: border-box;
+}
 
 button {
     margin-left: 20px;
     margin-right: 20px;
+    background-color: #0c61b3;
+    border: none;
+    color: white;
+    padding: 8px 12px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 14px;
+    cursor: pointer;
+    border-radius: 4px;
+    transition: background-color 0.3s ease;
 }
+button:hover {
+    background-color: #0c61b3;
+}
+
+
+
+
+
+
